<resources>
    <string name="app_name">BirdCounter</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->


    <string name="color_counter">Color counter</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="red">Red</string>
    <string name="reset">Reset Counter</string>
    <string name="gray">Gray</string>
    <string name="blue">Blue</string>
    <string name="tv_counter_value">%d</string>
    <string name="tv_color_value">%d</string>
</resources>